--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ember-mug"
+name = "ember_mug"
 version = "0.1.0"
 edition = "2021"
 
@@ -20,6 +20,7 @@ tokio = { version = "1.23.0", features = ["macros"] }
 tracing-subscriber = "0.3.16"
 
 [workspace]
+members = ["interface"]
 
 [workspace.dependencies]
 ember_mug = { path = "." }
