--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,10 @@ members = ["interface"]
 
 [workspace.dependencies]
 ember_mug = { path = "." }
+
+[profile.release]
+opt-level = 2 # fast and small wasm
+
+# Optimize all dependencies even in debug builds:
+[profile.dev.package."*"]
+opt-level = 2
