--- a/interface/Cargo.toml
+++ b/interface/Cargo.toml
@@ -15,12 +15,16 @@ eframe = { version = "0.20.0", default-features = false, features = [
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
 serde = { version = "1", features = ["derive"] }
-poll-promise = { version = "0.2.0", features = ["tokio"] }
 once_cell = "1.16.0"
 color-eyre = "0.6.2"
 tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
 flume = { version = "0.10.14", default-features = false, features = ["async"] }
 futures = "0.3.25"
+uuid = { version = "1.2.2", features = ["v4"] }
+hashbrown = "0.13.1"
+thiserror = "1.0.38"
+tracing = { version = "0.1.37" }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
