--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ uuid = "1.2.2"
 
 [dev-dependencies]
 color-eyre = "0.6.2"
-tokio = { version = "1.23.0", features = ["macros"] }
+tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
 tracing-subscriber = "0.3.16"
 
 [workspace]
