--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -10,6 +10,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
+      - run: |
+          sudo apt-get update
+          sudo apt-get install libdbus-1-dev
       - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: nightly
