--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,7 @@ opt-level = 2 # fast and small wasm
 # Optimize all dependencies even in debug builds:
 [profile.dev.package."*"]
 opt-level = 2
+
+[[example]]
+name = "example"
+doc-scrape-examples = true
