--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,7 +18,7 @@ jobs:
           toolchain: nightly
       - uses: Swatinem/rust-cache@v2
       - name: build docs
-        run: cargo doc --no-deps -Zunstable-options -Zrustdoc-scrape-examples -Zrustdoc-map
+        run: cargo doc --no-deps --all-features -Zunstable-options -Zrustdoc-scrape-examples -Zrustdoc-map
         env:
           RUSTDOCFLAGS: --cfg nightly
           RUSTFLAGS: --cfg nightly
