--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 binrw = "0.10.0"
 btleplug = "0.10.4"
 futures = "0.3.25"
-serde = { version = "1.0.152", optional = true }
+serde = { version = "1.0.152", optional = true, features = ["derive"] }
 thiserror = "1.0.38"
 tokio = { version = "1.23.0", default-features = false, features = ["time"] }
 tracing = "0.1.37"
