--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
 tracing-subscriber = "0.3.16"
 
 [workspace]
-members = ["egui_interface"]
+members = ["egui_interface", "xtask"]
 
 [workspace.dependencies]
 ember_mug = { path = "." }
