--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "ember_mug"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/emilgardis/ember_mug"
+keyword = ["bluetooth", "ble", "temperature", "embedded", "ember"]
+categories = ["hardware-support"]
+exclude = [".github", "docs"]
+description = "Control and retrieve data from an Ember Ceramic Mug using Bluetooth Low Energy (BLE)"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
