--- a/release.toml
+++ b/release.toml
@@ -2,7 +2,7 @@ pre-release-commit-message = "release {{crate_name}} {{version}}"
 tag = false
 push = false
 publish = false
-enable-features = ["all", "twitch_oauth2/all", "unsupported"]
+enable-all-features = true
 consolidate-commits = false
 pre-release-replacements = [
     { file = "CHANGELOG.md", search = "Unreleased", replace = "v{{version}}", prerelease = false },
