--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/emilgardis/ember_mug"
 keyword = ["bluetooth", "ble", "temperature", "embedded", "ember"]
 categories = ["hardware-support"]
-exclude = [".github", "docs"]
+exclude = [".github", "docs", "release.toml"]
 description = "Control and retrieve data from an Ember Ceramic Mug using Bluetooth Low Energy (BLE)"
 
 [dependencies]
