--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/emilgardis/ember_mug"
-keyword = ["bluetooth", "ble", "temperature", "embedded", "ember"]
+keywords = ["bluetooth", "ble", "temperature", "embedded", "ember"]
 categories = ["hardware-support"]
 exclude = [".github", "docs", "release.toml"]
 description = "Control and retrieve data from an Ember Ceramic Mug using Bluetooth Low Energy (BLE)"
@@ -22,7 +22,7 @@ uuid = "1.2.2"
 [dev-dependencies]
 color-eyre = "0.6.2"
 tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
-tracing-subscriber = "0.3.16"
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 
 [workspace]
 members = ["egui_interface", "xtask"]
