--- a/egui_interface/Cargo.toml
+++ b/egui_interface/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "ember_mug_egui"
 version = "0.1.0"
+description = "Interface with an Ember Ceramic Mug"
 edition = "2021"
 publish = false
 
